ec2_instance_module/main.tf
resource "aws_security_group" "this" {
  name = "${var.instance_name}-sg"
  description = "Allow ssh and http"
  vpc_id = var.vpc_id

    ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }


}


resource "aws_instance" "this" {
  ami = "ami-05ffe3c48a9991133"
  instance_type = var.instance_type
  subnet_id = var.subnet_id
  vpc_security_group_ids = [ aws_security_group.this.id ]

  tags ={
    Environment = terraform.workspace
  }
}
